--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   fluttertoast: ^8.1.1
   firebase_core: ^2.17.0
   firebase_auth: ^4.10.1
+  shared_preferences: ^2.2.1
 
 dev_dependencies:
   flutter_test:
