--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_unity_widget: ^2022.2.0
   permission_handler: ^8.0.0+2
   google_fonts: ^4.0.4
+  http: ^0.13.6
 
 dev_dependencies:
   flutter_test:
