--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,10 +42,21 @@ dependencies:
   firebase_core: ^2.17.0
   firebase_auth: ^4.10.1
   shared_preferences: ^2.2.1
-  flutter_unity_widget: ^2022.2.0
   permission_handler: ^8.0.0+2
   google_fonts: ^4.0.4
   http: ^0.13.6
+  model_viewer_plus: ^1.5.0
+  flutter_unity_widget: ^2022.2.0
+  firebase_storage: ^11.3.1
+  gcloud: ^0.8.11
+
+#dependency_overrides:
+  #webview_flutter: 2.0.13
+dependency_overrides:
+  flutter_unity_widget:
+    git:
+      url: https://github.com/juicycleff/flutter-unity-view-widget.git
+
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +79,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
