--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_unity_widget: ^2022.2.0
   firebase_storage: ^11.3.1
   gcloud: ^0.8.11
+  flutter_svg: ^2.0.7
 
 #dependency_overrides:
   #webview_flutter: 2.0.13
