--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   firebase_storage: ^11.3.1
   gcloud: ^0.8.11
   flutter_svg: ^2.0.7
+  qr_code_scanner: ^1.0.1
 
 #dependency_overrides:
   #webview_flutter: 2.0.13
