--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   flutter_svg: ^2.0.7
   qr_code_scanner: ^1.0.1
   animated_splash_screen: ^1.3.0
+  firebase_database: ^10.3.2
 
 #dependency_overrides:
   #webview_flutter: 2.0.13
